--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,7 +6,7 @@ body {
 
 .appContainer {
   max-width: 860px;
-  margin: 30px auto 0 auto;
+  margin: 30px auto 30px auto;
   text-align: center;
   border-radius: 25px;
   -webkit-box-shadow: 1px 1px 25px 13px rgba(212,205,178,1);
